--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@
 }
 
 .logo{
-    background-image: url("images/amazon_logo.png");
+    background-image: url("./images/amazon_logo.png");
     height: 50px;
     width: 100%;
     background-size:cover;
@@ -122,7 +122,7 @@ span{
 
 }
 .hero-section{
-    background-image: url(/images/hero_image.jpg);
+    background-image: url(./images/hero_image.jpg);
     
    background-size: cover;
 
@@ -219,7 +219,7 @@ ul a{
     align-items: center;
 }
 .foot-logo{
-    background-image: url("images/amazon_logo.png");
+    background-image: url("./images/amazon_logo.png");
     height: 50px;
     width: 100%;
     background-size:cover;   
