--- a/style.css
+++ b/style.css
@@ -122,7 +122,7 @@ span{
 
 }
 .hero-section{
-    background-image: url(./images/hero_image.jpg);
+    background-image: url("./images/hero_image.jpg");
     
    background-size: cover;
 
